; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/extr_osl.c_AcpiOsReleaseLock.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/extr_osl.c_AcpiOsReleaseLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DISPATCH_LEVEL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AcpiOsReleaseLock(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = sext i32 %6 to i64
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* @DISPATCH_LEVEL, align 8
  %10 = icmp sge i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i64, i64* %3, align 8
  %13 = trunc i64 %12 to i32
  %14 = call i32 @KeReleaseSpinLockFromDpcLevel(i32 %13)
  br label %20

15:                                               ; preds = %2
  %16 = load i64, i64* %3, align 8
  %17 = trunc i64 %16 to i32
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @KeReleaseSpinLock(i32 %17, i64 %18)
  br label %20

20:                                               ; preds = %15, %11
  ret void
}

declare dso_local i32 @KeReleaseSpinLockFromDpcLevel(i32) #1

declare dso_local i32 @KeReleaseSpinLock(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
